--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,11 +2,11 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Progetto Ruiz{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}<p>Contenuto blocco Body template <b>base.html.twig</b></p>{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
